# chatbot

./: README.md  pyproject.toml
chat/: __init__.py  chatbot.py
chat/chains/: __init__.py  stream.py
chat/chat_models/: __init__.py  chat_models.py
chat/handlers/: __init__.py  streaming.py
chat/memories/: __init__.py  buffers.py
gui/: gui.py
